2005-04-04  Petr Ovtchenkov  <ptr@island...>

	* errno.h, time.h, test_errno.cpp: evc3 and evc4 has no errno.h
	and time.h headers [patch from Michael Fink].

2005-04-02  Francois Dumont  <dums@stlport...>

	* stlport/cstdlib: Fix missing div taking long definition for VC71.

2005-04-01  Francois Dumont  <dums@stlport...>

	* stlport/errno.h: Add comments to explain the file code.
	
	* stlport/stl/_string_io.h: Yet an other fix to the i/o basic_string
	operators that was not right under cygwin/mingwin.

	* build/Makefiles/gmake/gcc.mak: Merge the 2 distinct cygmin blocks
	in one and add -Wall and -Wsign-promo warnings.
	
2005-04-01  Petr Ovtchenkov  <ptr@island...>

	* test/unit/test_errno.cpp: fix test, errno may be non-zero without
	any error, but it reflect error code after some function fail.
	This not the same.

	* test/unit/mfunptr_test.cpp: add step-by-step test how compiler
	recognize bind of member function for find_if. Not all compilers may
	understand this. Thanks Markus for test idea.

2005-03-31  Francois Dumont  <dums@stlport...>

	* stlport/errno.h: Fixed for MSVC compilers, should still be fine for
	others.
	
	* test/unit/test_errno.cpp: Modified to be a real unit test. Also test
	errno assignment.
	
2005-03-30  Francois Dumont  <dums@stlport...>

	* stlport/stl/_fstream.c: Try to fix ambiguous type deduction in a max
	call under WinCE.
	
	* stlport/stl/_cmath.h: Fix missing non Standard hypot function under
	WinCE thanks Micheal Fink.
	
	* stlport/stl/_cmath.h: Attempt to fix the WinCE math function support
	where neither *f nor *l functions are present even if the compiler
	support the long double type.
	
2005-03-30  Petr Ovtchenkov  <ptr@island...>

	* stlport/assert.h, float.h, iso646.h, limits.h, errno.h:
	added in accordance with Standard D.5 [compatibility with standard
	C library] to prevent wrong std interpretation in ill-formed native
	headers [definition of namespace std in C headers].
