@@ -15,6 +15,7 @@
 
 #include "cppunit_proxy.h"
 #include "file_reporter.h"
+#include <windows.h>
 
 namespace CPPUNIT_NS
 {
